qa-service/k8s/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa
  namespace: prod
spec:
  selector:
    matchLabels:
      name: qa
  replicas: 2
  template:
    metadata:
      labels:
        name: qa
    spec:
      containers:
      - name: qa
        image: lordblackfish/qa-service:version-tag
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 3000
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - all
            add: ["NET_ADMIN", "SYS_TIME"]
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 3
